# internal/model/library.go
@@ -1,23 +1,22 @@
 package model
 
 type User struct {
-	ID    int    `json:"id"`
-	Name  string `json:"name"`
-	Email string `json:"email"`
-	Books []Book `json:"books,omitempty"`
+	ID    int     `json:"id"`
+	Name  string  `json:"name"`
+	Email string  `json:"email"`
+	Books []*Book `json:"books,omitempty"`
 }
 
 type Author struct {
 	ID        int     `json:"id"`
 	Name      string  `json:"name"`
-	BirthDate string  `json:"birth_date"`
+	BirthDate string  `json:"birthDate"`
 	Books     []*Book `json:"books"`
 }
 
 type Book struct {
-	ID        int    `json:"id"`
-	Title     string `json:"title"`
-	Available bool   `json:"available"`
-	UserID    int    `json:"user_id,omitempty"`
-	AuthorID  int    `json:"author_id"`
+	ID       int    `json:"id"`
+	Title    string `json:"title"`
+	UserID   int    `json:"userId,omitempty"`
+	AuthorID int    `json:"authorId"`
 }
